--- a/frontend/src/locales/th/translation.json
+++ b/frontend/src/locales/th/translation.json
@@ -23,7 +23,21 @@
           "letter": "ดูตัวอักษรเกาหลี"
         },
         "modal": {
-          "goGameModalText": "คุณต้องการดำเนินการต่อหรือไม่?"
+          "goGameModalText": "คุณต้องการดำเนินการต่อหรือไม่?",
+          "title": {
+            "gameOver": "",
+            "wrongAnswer": "คำตอบที่ไม่ถูกต้อง",
+            "correctAnswer": "คำตอบ"
+          },
+          "text": {
+            "gameOver": "เกมจะจบลงเมื่อหัวใจทั้งหมดถูกใช้หมดแล้ว",
+            "wrongAnswer": "คำตอบนี้ไม่ถูกต้อง \nโปรดลองอีกครั้ง",
+            "correctAnswer": "ยินดีด้วย! \nถูกต้องแล้ว"
+          }
+        },
+        "complete": {
+          "again": "เขียนใหม่",
+          "check": "ตรวจคำตอบ"
         }
       }
     },
@@ -71,7 +85,7 @@
       "text": "มีสถานการณ์ที่คุณต้องการหรือไม่? เรียนภาษาเกาหลีด้วยการพูดคุยโดยตรงกับแชทบอท!",
       "start": "เริ่มการสนทนา",
       "topic": "หัวข้ออะไรที่คุณต้องการพูดคุยเกี่ยวกับ?",
-      "input": "กรุณากรอกรายละเอียดด้านล่าง"
+      "input": "กรุณาเขียนเป็นภาษาเกาหลีด้านล่าง"
     },
     "situation": {
       "title": {
@@ -89,7 +103,9 @@
         "transport": "ฉันใส่บัตรโดยสารลงในกล่องเงินสด",
         "mart": "แคชเชียร์ถามฉันบางอย่างอยู่เสมอ",
         "university": "ขอแก้ไขเกรดจากอาจารย์"
-      }
+      },
+      "result": "ส่งผล",
+      "exit": "ออก"
     }
   },
   "mypage": {
