--- a/frontend/src/locales/vi/translation.json
+++ b/frontend/src/locales/vi/translation.json
@@ -23,7 +23,21 @@
           "letter": "Xem ký tự tiếng Hàn"
         },
         "modal": {
-          "goGameModalText": "Bạn có muốn tiếp tục?"
+          "goGameModalText": "Bạn có muốn tiếp tục?",
+          "title": {
+            "gameOver": "Trò chơi kết thúc",
+            "wrongAnswer": "Câu trả lời sai",
+            "correctAnswer": "Trả lời"
+          },
+          "text": {
+            "gameOver": "Trò chơi kết thúc khi tất cả trái tim đã được sử dụng hết",
+            "wrongAnswer": "Câu trả lời này không chính xác. \nVui lòng thử lại",
+            "correctAnswer": "Chúc mừng! \nĐúng vậy"
+          }
+        },
+        "complete": {
+          "again": "Viết lại",
+          "check": "Kiểm tra câu trả lời"
         }
       }
     },
@@ -71,7 +85,7 @@
       "text": "Có tình huống nào bạn muốn không? Học tiếng Hàn bằng cách nói chuyện trực tiếp với chatbot!",
       "start": "Bắt đầu một cuộc trò chuyện",
       "topic": "Bạn muốn nói về chủ đề gì?",
-      "input": "Vui lòng điền vào bên dưới"
+      "input": "Vui lòng viết bằng tiếng Hàn bên dưới"
     },
     "situation": {
       "title": {
@@ -89,7 +103,9 @@
         "transport": "Tôi nhét thẻ giao thông vào hộp đựng tiền.",
         "mart": "Người thu ngân cứ hỏi tôi điều gì đó.",
         "university": "Yêu cầu sửa điểm từ giáo sư."
-      }
+      },
+      "result": "Gửi kết quả",
+      "exit": "Lối ra"
     }
   },
   "mypage": {
