--- a/frontend/src/locales/ko/translation.json
+++ b/frontend/src/locales/ko/translation.json
@@ -67,8 +67,8 @@
       "practice": "연습하기",
       "record": "녹음하기",
       "totalSpeech": "전체대사",
-      "finishShadowning": "종료하기",
-      "dramaShadowing": "드라마 쉐도잉",
+      "finishShadowning": "학습 종료하기",
+      "dramaShadowing": "쉐도잉",
       "finishText": "학습을 종료하시겠습니까?",
       "completeMent": "종료하기",
       "openMent": "열기",
