--- a/frontend/src/locales/vi/translation.json
+++ b/frontend/src/locales/vi/translation.json
@@ -67,8 +67,8 @@
       "practice": "luyện tập",
       "record": "ghi âm",
       "totalSpeech": "Tổng số bài phát biểu",
-      "finishShadowning": "Hoàn thành",
-      "dramaShadowing": "Bóng tối kịch",
+      "finishShadowning": "Kết thúc việc học",
+      "dramaShadowing": "Bóng tối",
       "finishText": "Bạn có chắc chắn muốn học xong không?",
       "completeMent": "Hoàn thành",
       "openMent": "Mở",
@@ -112,18 +112,19 @@
     "language": "Tiếng Việt",
     "welcome": ", Xin chào :)",
     "tear": "đồng",
+    "now": "Hiện nay ",
     "attendance": "Tôi đang tham dự liên tiếp.",
     "attendanceComplete": "Điểm danh đã hoàn thành",
     "getAttendatnce": "Nhận điểm tham dự",
     "shadowing": "lặp lại",
-    "sing": "nhạc của tôi",
-    "ai": "AIkết quả",
+    "sing": "hát",
+    "ai": "kết quả",
     "learn": "Học hỏi"
   },
   "ranking": {
     "todayRanking": "Bảng xếp hạng hôm nay",
-    "myScore": "Điểm số của tôi",
-    "ranking": "xếp hạng",
+    "myScore": "Điểm",
+    "ranking": "hạng",
     "user": "người dùng",
     "score": "điểm"
   }
