--- a/frontend/src/locales/id/translation.json
+++ b/frontend/src/locales/id/translation.json
@@ -67,8 +67,8 @@
       "practice": "praktik",
       "record": "Rekaman",
       "totalSpeech": "Total Speech",
-      "finishShadowning": "Menyelesaikan",
-      "dramaShadowing": "Drama Membayangi",
+      "finishShadowning": "Akhiri Pembelajaran",
+      "dramaShadowing": "Membayangi",
       "finishText": "Apakah Anda yakin ingin menyelesaikan pembelajaran?",
       "completeMent": "Menyelesaikan",
       "openMent": "Membuka",
@@ -77,7 +77,7 @@
   },
   "learning": {
     "tap": {
-      "life": "sehari-hari",
+      "life": "hidup",
       "ai": "AI hasil"
     },
     "direct": {
@@ -112,12 +112,13 @@
     "language": "Korea",
     "welcome": ", Hai :)",
     "tear": "perunggu",
-    "attendance": "Pertama Saya hadir secara berturut-turut.",
+    "now": "Sekarang ",
+    "attendance": "kehadiran hari",
     "attendanceComplete": "Kehadiran selesai",
     "getAttendatnce": "Dapatkan poin kehadiran",
-    "shadowing": "bayanganku",
-    "sing": "lagu saya",
-    "ai": "AI hasil",
+    "shadowing": "isi",
+    "sing": "Musik",
+    "ai": "hasil",
     "learn": "Mempelajari"
   },
   "ranking": {
