--- a/frontend/src/locales/ja/translation.json
+++ b/frontend/src/locales/ja/translation.json
@@ -67,8 +67,8 @@
       "practice": "練習する",
       "record": "録音する",
       "totalSpeech": "総スピーチ",
-      "finishShadowning": "仕上げる",
-      "dramaShadowing": "ドラマのシャドーイング",
+      "finishShadowning": "学習を終了する",
+      "dramaShadowing": "シャドーイング",
       "finishText": "学習を終了してもよろしいですか?",
       "completeMent": "仕上げる",
       "openMent": "開ける",
@@ -78,7 +78,7 @@
   "learning": {
     "tap": {
       "life": "日常",
-      "ai": "AI結果"
+      "ai": "AI 結果"
     },
     "direct": {
       "title": "直接会話してみてください",
@@ -110,8 +110,9 @@
   },
   "mypage": {
     "language": "日本語",
-    "welcome": "こんにちは :)",
+    "welcome": ", こんにちは :)",
     "tear": "Bronze",
+    "now": "今 ",
     "attendance": "連続出席中です。",
     "attendanceComplete": "出席完了",
     "getAttendatnce": "出席ポイントを獲得する",
@@ -122,8 +123,8 @@
   },
   "ranking": {
     "todayRanking": "今日のランキング",
-    "myScore": "私の成績",
-    "ranking": "ランキング",
+    "myScore": "スコア",
+    "ranking": "順位",
     "user": "ユーザー",
     "score": "スコア"
   }
